few ui refinemants

--- a/src/app/pages/calendar/calendar.component.scss
+++ b/src/app/pages/calendar/calendar.component.scss
@@ -13,10 +13,10 @@
   box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
 
-// .heading
-// {
-//   text-align: center;
-// }
+.heading h1
+{
+  font-size: 40px;
+}
 
 .google-map {
   padding-bottom: 50%;
