--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -21,3 +21,12 @@
   top: 0;
   position: absolute;
 }
+
+
+.content h1{
+  color: #000;
+  font-size: 40px;
+  font-weight: bold;
+  margin-left: 20px;
+  margin-right: 20px;
+}
