--- a/src/app/pages/enrollpage/enrollpage.component.html
+++ b/src/app/pages/enrollpage/enrollpage.component.html
@@ -3,7 +3,7 @@
 <div class="banner mb-4">
   <div class="content text-center">
     <div class="intro mt-3 mb-5">
-      <h1 class="mb-5">Application For Enrollment</h1>
+      <h1 class="mt-5 mb-5">Application For Enrollment</h1>
       <p>A non-refundable application fee of $25 must accompany this application.
         <br>
         The fee can be paid by using the PayPal  button at the bottom of this page.
@@ -833,7 +833,7 @@
       </div>
       <div class="col">
         <div class="p-3">
-          <a href="https://www.paypal.com/webapps/hermes?token=2XU76548MY381311S&useraction=commit&rm=1&wpsFlowRedirectToXorouterSkipHermesStartTime=1698743869095&mfid=1698743868831_f2265498a4884" target="_blank"><img class="" src="/assets/btn_paynowCC_LG.gif" alt="logo" type="button"></a>
+          <a href="https://www.paypal.com/webapps/hermes?token=1L752494EY830535W&useraction=commit&rm=1&wpsFlowRedirectToXorouterSkipHermesStartTime=1701413587986&flowType=WPS&mfid=1701413587703_f8158570b62c3" target="_blank"><img class="" src="/assets/btn_paynowCC_LG.gif" alt="logo" type="button"></a>
         </div>
       </div>
     </div>
