--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <!-- <p>calendar works!</p> -->
 
 <div class="container heading mt-3 mb-3 text-center">
-  <h1>Calendars</h1>
+  <h1 class="mt-4 mb-4"><strong>Calendars</strong></h1>
   <span class="btn mb-3">
     <a href ="https://static1.squarespace.com/static/6311339d4ad10577507f3166/t/64f8dfd14435603cae3e1c72/1694031825352/Monthly+Cal.pdf" attributes-list target="_blank">VIEW 2023-24 CALENDAR<i class="bi bi-arrow-right"></i></a>
   </span>
